--- a/.github/workflows/firebase-hosting-dev.yml
+++ b/.github/workflows/firebase-hosting-dev.yml
@@ -1,4 +1,4 @@
-# Deploy dev branch to dev channel
+# Deploy dev branch to dedicated dev site
 name: Deploy to Firebase Hosting (Dev)
 on:
   push:
@@ -14,6 +14,6 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOXBOXCRIC }}
-          channelId: dev
+          channelId: live
           projectId: boxboxcric
-          expires: 30d
+          target: dev
