--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@bybas/weather-icons": "^2.0.0",
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "cors": "^2.8.5",
@@ -24,6 +25,9 @@
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.16.3",
-    "@parcel/transformer-webmanifest": "^2.16.3"
+    "@parcel/transformer-webmanifest": "^2.16.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "typescript": "^5.9.3"
   }
 }
