--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.16.3",
     "@parcel/transformer-webmanifest": "^2.16.3",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "typescript": "^5.9.3"
