--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html && cp src/sw.js dist/sw.js",
-    "ship": "npm run build && firebase deploy --only hosting:prod && git add . && git commit -m \"Auto Update $(date)\" && git push",
+    "ship": "npm run build && firebase deploy --only hosting:prod && git add . && git commit -m \"Auto Update $(date)\" && git push origin master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
