feat: add deploy:dev script for dev environment

--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,9 @@
       "hosting": {
         "prod": [
           "theboxcric"
+        ],
+        "dev": [
+          "boxcric-dev"
         ]
       }
     }
