--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "boxcric",
   "version": "1.0.0",
+  "WARNING": "⚠️ DO NOT DEPLOY TO PRODUCTION! Use 'npm run deploy:dev' only. Ask before any production deployments.",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html && cp src/sw.js dist/sw.js",
-    "ship": "npm run build && firebase deploy --only hosting:prod && git add . && git commit -m \"Auto Update $(date)\" && git push origin main",
+    "deploy:dev": "npm run build && firebase deploy --only hosting:dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
