fix(ci): Remove force push, rely on branch protection bypass

--- a/.github/workflows/ai_summary.yml
+++ b/.github/workflows/ai_summary.yml
@@ -33,4 +33,5 @@ jobs:
           commit_message: "🤖 Update AI Match Summaries [skip ci]"
           file_pattern: "src/data/*"
           add_options: "-A"
-          push_options: "--force"
+          repository: .
+          branch: main
